--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -11,7 +11,7 @@ html {
 
 body {
   color: $fg-color;
-  background-color: $bg-color;
+  background-color: $bg-color !important;
 	font-family: $text-font-family;
 	font-size: 1.6em;
 	font-weight: 300;
@@ -204,4 +204,8 @@ img {
 
 .fas {
   font-weight: 900;
+}
+
+.thankyou #footer {
+  display: none;
 }
