--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -6,13 +6,13 @@
     <h1>{{ .Site.Params.author }}</h1>
     <h2>{{ .Site.Params.info }}</h2>
     {{ with .Site.Params.job }}
-      <h4>{{ .info }}<a href="{{ .url }}">{{ .name }}</a></h4>
+      <h4>{{ .info }}<a href="{{ .url }}" target="_blank">{{ .name }}</a></h4>
     {{ end }}
     
     {{ with .Site.Params.social }}
     <ul>
       {{ range sort .}}
-      <li><a href="{{ .url }}">{{ .name }}</a></li>
+      <li><a href="{{ .url }}" target="_blank">{{ .name }}</a></li>
       {{ end }}
     </ul>
     {{ end }}
